crates/tests/fixtures/harness/data/error/unknown_attribute/input.rdl

#[winrt]
mod Test {
    #[Unknown(42)]
    class MyClass {}
}
        